Add "Google OAuth2 login" modules, fix Dockerfile configuration
